2014-07-10 MickeM
 * Changed so plugin generator uses jinja (instead of strings)

2014-07-10 MickeM
 * A rollup of all changes over the last month
 * Refactored and removed precompiled headers
 * Linux: referenced path is the exe file (not the current folder)
 * Split documentation into a separate projects
 * Bumped openssl version
 * Fixed check_drivesize
 * Fixed multiple return packets patch
 * Fixed buffer overflow in external scripts
 * Added option to install script from comand line
     nscp ext --script scripts\foo.bat
     nscp ext --script scripts\foo.bat --alias bar ..arguments test1
 * Added command line interface to setup NRPE server
  nscp nrpe -- install --help
  nscp nrpe -- install --port 1234 --allowed-host foo.com --insecure
  ... 
 * Fixed some test failing and spli NSCA test into multiple ones
 * Meged in some changes from 0.4.2
 * Added support for generating certificates
 * Added new option insecure which sets defaults to "legacy insecure NRPE"
 * Fixed registry bug
 
2014-04-23 MickeM
 * Added initial WebServer module
 * Fixed issue with check_nt INSTANCES
 * Fixed documentation bugs
 * Fixed issue with checking values without units

2014-04-16 MickeM
 * Added filter functions to documentation
 * Fixed issue with conversion of CheckServiceState #707

2014-04-15 MickeM
 * Fixed issue with aveerages and performance check_pdh #710
 * Fixed issue with converting empty exclude statements for CheckService
 * Fixed issue with check_taskshced and most_recent_run_time

2014-04-xx MickeM
 * Added testcase for powershell scripts #709

2014-03-10 MickeM
 ! 0.4.2 RELEASE
 * Fixed server restarting listeners on errors

2014-03-08 MickeM
 * Added total object to check_files
 * Fixed registry issues

2014-03-06 MickeM
 * Fixed performance config order
 * Fixed external script alias and support for help-csv

2014-03-05 MickeM
 * Fixed crash dump issue
 * Fixed memory leak in NSCA
  
2014-03-04 MickeM
 * Fixed issue with CheckTaskSched and status #702