@@ -1,3 +1,8 @@
+2014-07-13 MickeM
+ * Improved reload handling.
+   Plugins are now reloaded and if they support reload messages can do whatever they want.
+ * Added retry command line option to clients
+
 2014-07-10 MickeM
  * Changed so plugin generator uses jinja (instead of strings)
 
